[package]
name = "sip_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.22", features = ["derive"] }
color-eyre = "0.6.2"
deadpool-sqlite = "0.5.0"
fastwebsockets = { version = "0.4.4", features = ["upgrade"] }
hyper = "0.14.27"
hyper-rustls = "0.24.1"
lazy_static = "1.4.0"
local-ip-address = "0.5.4"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", branch = "main", features = [
    "eyre",
    "rustls-tls",
    "e2e-encryption",
    "automatic-room-key-forwarding",
    "sqlite",
], default-features = false }
rsip = "0.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
webpki-roots = "0.25.2"
webrtc = { git = "https://github.com/MTRNord/webrtc.git", branch = "MTRNord/sip-asterisk" }
